Added classes for CSS styling

--- a/style.css
+++ b/style.css
@@ -20,10 +20,9 @@ header > div {
     border-bottom: 1px solid lightgray;
   }
 
-  .Search {
-
+  .search {
+    
   }
-  
   nav {
     width: 600px;
   }
