--- a/style.css
+++ b/style.css
@@ -20,26 +20,35 @@ header > div {
     border-bottom: 1px solid lightgray;
   }
 
-  .search {
-    
+form > label {
+    color: (0,0,0,.05);
+    padding: 0 25px;
+    display: flex;
+    justify-content: space-between;
+
   }
-  nav {
+
+form > input {
+    color: (0,0,0,.05) ;
+
+  }
+nav {
     width: 600px;
   }
   
-  nav ul {
+nav ul {
     list-style: none;
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
   
-  nav a {
+nav a {
     text-decoration: none;
     color: black;
   }
   
-  .blackHeart {
+.blackHeart {
     width: 20px;
     margin-right: 1rem;
   }
