--- a/style.css
+++ b/style.css
@@ -12,26 +12,7 @@ header > div {
     border-bottom: 1px solid lightgray;
   }
 
-  header > #Search {
-    padding: 0 25px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 1px solid lightgray;
-  }
 
-form > label {
-    color: (0,0,0,.05);
-    padding: 0 25px;
-    display: flex;
-    justify-content: space-between;
-
-  }
-
-form > input {
-    color: (0,0,0,.05) ;
-
-  }
 nav {
     width: 600px;
   }
@@ -52,3 +33,144 @@ nav a {
     width: 20px;
     margin-right: 1rem;
   }
+  
+header > .search {
+    
+    padding: 0 25px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    
+  }
+
+
+
+form {
+    
+    background-color: rgba(0,0,0,.05);
+    display: flex;
+    justify-content: space-between;
+
+  }
+
+form > input {
+    width: 75rem;
+    background-color: rgba(0,0,0,.05);
+    border-style: none;
+
+  }
+
+.npmLogo {
+  margin: 1rem 1rem 1rem 1rem;
+  width: 100px;
+}
+
+.magnifyingGlass {
+  width: 40px;
+}
+
+form > .searchButton {
+  background-color: #fb3e44;
+  color: white;
+  border-style: none;
+  
+}
+
+.buttons {
+  padding: 0 25px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.join {
+  padding: 0 25px;
+  text-decoration: none;
+  color: black;
+  border: 1px solid black;
+  
+}
+
+.logIn {
+  padding: 0 25px;
+  text-decoration: none;
+  color: black;
+  
+}
+
+#Build {
+  height: 600px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+  background-color: rgba(232,217,217,.3);
+}
+
+#Build h1 {
+  font-size: 100px;
+  font-weight: 800;
+}
+
+#Build p {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  width: 25rem;
+}
+
+#Build div {
+  width: 25rem;
+  display: flex;
+  justify-content: space-evenly;
+  padding: 25px;
+}
+
+.see-plans {
+  padding: 15px 30px;
+  background-color: #FB3B49;
+  box-sizing: border-box;
+  box-shadow: 8px 8px 0 rgba(251,59,73,.2);
+  color: white;
+  text-decoration: none;
+}
+
+.join-for-free {
+  text-decoration: none;
+  color: black;
+}
+
+#Bring {
+  height: 600px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+}
+
+.hexagon-img  {
+  width: 200px;
+}
+
+#Bring h1 {
+  background-color: rgba(255,204,53,.4);
+  transform: skew(9deg,0deg);
+  font-style: italic;
+  margin: 20px 20px;
+  font-size: 30px;
+
+}
+
+#Bring p {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  width: 50rem;
+}
+
+.last-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
