--- a/style.css
+++ b/style.css
@@ -34,13 +34,12 @@ nav a {
     margin-right: 1rem;
   }
   
-header > .search {
+.search {
     
     padding: 0 25px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    
   }
 
 
@@ -50,6 +49,7 @@ form {
     background-color: rgba(0,0,0,.05);
     display: flex;
     justify-content: space-between;
+    margin-bottom: 0px;
 
   }
 
@@ -127,17 +127,21 @@ form > .searchButton {
 }
 
 .see-plans {
-  padding: 15px 30px;
+  padding: 15px 50px;
   background-color: #FB3B49;
   box-sizing: border-box;
   box-shadow: 8px 8px 0 rgba(251,59,73,.2);
   color: white;
   text-decoration: none;
+  margin-right: 20px;
 }
 
 .join-for-free {
   text-decoration: none;
   color: black;
+  background-color: white;
+  padding: 15px 50px;
+
 }
 
 #Bring {
@@ -170,7 +174,40 @@ form > .searchButton {
 
 .last-section {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+}
 
+.sections {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 25px;
+
+}
+
+.sections section {
+  width: 300px;
+  margin: 30px;
+}
+
+.sections h1 {
+  color: #ED1C24;
+  
+
+}
+
+.sections img {
+  width: 40px; 
+}
+
+.create-an-org {
+  padding: 20px;
+  width: 420px;
+  box-shadow: 8px 8px 0 rgba(128,83,35,.2);
+  background-color: black;
+  text-decoration: none;
+  color: white;
+  text-align: center;
 }
